# reddit-scraper

./: README.md  main.py  pyproject.toml
reddit-scraper-apify-collection/: Health.bru  Scrape.bru  bruno.json
src/api/: apify_client.py  apify_post_scraper.py
src/app/: serving_app.py
src/db/: neo4j_service.py
src/models/: schemas.py
